--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
     <Button
         android:id="@+id/restaurantBtn"
         android:layout_width="match_parent"
-        android:layout_height="30dp" />
+        android:layout_height="wrap_content"
+        android:text="Restaurant" />
+    <Button
+        android:id="@+id/reservationBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reservation"/>
 
 </LinearLayout>
