--- a/app/src/main/res/drawable/gray_gradient.xml
+++ b/app/src/main/res/drawable/gray_gradient.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#f5ffdb"
-        android:endColor="@android:color/transparent"
+        android:startColor="#d3d3d3"
+        android:endColor="@android:color/white"
         android:angle="90" />
 </shape>
