--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -55,15 +55,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:background="@android:drawable/dialog_holo_light_frame">
 
                 <LinearLayout
@@ -124,7 +125,6 @@
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:text="SHOW OTHER..."
-                        android:layout_marginBottom="16dp"
                         />
 
                     <TextView
@@ -139,7 +139,109 @@
                         android:text="Now opened, from 11:30 to 14:30"
                         />
                 </LinearLayout>
-            </RelativeLayout>
+            </LinearLayout>
+
+            <!-- Photo -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    card_view:cardCornerRadius="4dp"
+                    android:padding="16dp"
+                    android:minHeight="64dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:padding="8dp"
+                            android:textSize="18sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="17 available photos"/>
+                        <HorizontalScrollView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <LinearLayout
+                                android:minHeight="64dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:orientation="horizontal">
+                                <fragment
+                                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
+                                    android:id="@+id/photo1"
+                                    android:name="it.polito.mad_lab3.restaurant.foodPhoto.PhotoViewer"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginRight="1dp"
+                                    />
+                                <fragment
+                                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
+                                    android:id="@+id/photo2"
+                                    android:name="it.polito.mad_lab3.restaurant.foodPhoto.PhotoViewer"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginRight="1dp"
+                                    />
+                                <fragment
+                                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
+                                    android:id="@+id/photo3"
+                                    android:name="it.polito.mad_lab3.restaurant.foodPhoto.PhotoViewer"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginRight="1dp"
+                                    />
+                                <fragment
+                                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
+                                    android:id="@+id/photo4"
+                                    android:name="it.polito.mad_lab3.restaurant.foodPhoto.PhotoViewer"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    custom:latest="true"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_centerHorizontal="true"
+                                    />
+                            </LinearLayout>
+                        </HorizontalScrollView>
+                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
+            </LinearLayout>
+            <!-- End Photo -->
+
+            <!-- Menu -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    card_view:cardCornerRadius="4dp"
+                    android:padding="16dp"
+                    android:minHeight="64dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                        <fragment
+                            android:id="@+id/menuPrevFragment"
+                            android:name="it.polito.mad_lab3.restaurant.menu_prev.MenuPrevFragment"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+            <!-- End Menu -->
+
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView >
