--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="test">#76213e</color>
+    <color name="blackSemiTrasparent">#80FFFFFF</color>
+    <color name="blackSemiTrasparent90">#50FFFFFF</color>
+    <color name="colorBackground">#f4f1efef</color>
 </resources>
