--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -180,7 +180,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentTop="true"
                                     android:layout_centerHorizontal="true"
-                                    android:layout_marginRight="1dp"
+                                    android:layout_marginRight="2dp"
                                     />
                                 <fragment
                                     xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
@@ -190,7 +190,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentTop="true"
                                     android:layout_centerHorizontal="true"
-                                    android:layout_marginRight="1dp"
+                                    android:layout_marginRight="2dp"
                                     />
                                 <fragment
                                     xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
@@ -200,7 +200,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentTop="true"
                                     android:layout_centerHorizontal="true"
-                                    android:layout_marginRight="1dp"
+                                    android:layout_marginRight="2dp"
                                     />
                                 <fragment
                                     xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
@@ -264,12 +264,68 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Offers"/>
-                        <include  layout="@layout/offer_prev_view" />
+                        <HorizontalScrollView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <LinearLayout
+                                android:id="@+id/LLOffersPrev"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <!-- offers inserted programmatically in this point -->
+                            </LinearLayout>
+                        </HorizontalScrollView>
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
             </LinearLayout>
             <!-- End Offers -->
+
+        <!-- Reviews -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                card_view:cardCornerRadius="4dp"
+                android:padding="16dp"
+                android:minHeight="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:padding="8dp"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="41 reviews"/>
+                    <RatingBar
+                        android:layout_marginTop="8dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:theme="@style/RatingBar"
+                        style="?android:attr/ratingBarStyle"
+                        android:rating="3.5"/>
+                    <!-- max 3 reviews inserted programmatically in this point -->
+                    <include layout="@layout/review_view" />
+                    <include layout="@layout/review_view" />
+                    <include layout="@layout/review_view" />
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:text="SHOW ALL" />
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+        <!-- End Reviews -->
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView >
