--- a/app/src/main/res/layout/offer_prev_view.xml
+++ b/app/src/main/res/layout/offer_prev_view.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:id="@+id/foodIV"
         android:layout_width="250dp"
-        android:src="@drawable/cibo2"
+        android:src="@drawable/offer_nothumb"
         android:scaleType="centerCrop"
         android:layout_height="150dp"
         android:adjustViewBounds="true" />
@@ -23,6 +23,7 @@
         android:gravity="center_vertical"
         android:id="@+id/relativeLayout">
         <TextView
+            android:id="@+id/offerName"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
         android:layout_alignEnd="@+id/foodIV"
         android:gravity="center_vertical">
         <TextView
+            android:id="@+id/offerPrice"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,12 +64,14 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
             <RatingBar
+                android:id="@+id/offerRatingProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/RatingBar"
                 style="?android:attr/ratingBarStyleSmall"
                 android:rating="3.5"/><!--android:scrollbarStyle="?android:attr/ratingBarStyleSmall"-->
             <TextView
+                android:id="@+id/offerNumRatings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
@@ -84,6 +88,7 @@
         android:gravity="center_vertical|right"
         android:visibility="visible">
         <TextView
+            android:id="@+id/offerDetails"
             android:padding="2dp"
             android:textSize="12sp"
             android:textStyle="italic"
@@ -91,5 +96,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
-
+    <ImageView
+        android:layout_width="2dp"
+        android:layout_height="150dp"
+        android:background="@android:color/transparent"
+        android:layout_toRightOf="@id/foodIV"/>
 </RelativeLayout>
