--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -1,37 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:src="@android:color/holo_green_light"
-        android:layout_weight="1"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
-        <TextView
-            android:layout_width="match_parent"
+        android:layout_weight="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/textView"
+                android:text="@string/pick_date"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_blue_dark"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                />
+
+        <NumberPicker
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="20sp"
-            android:textSize="18sp"
-            android:text="Taking Backup,Hold on for Few Minutes..."
-            />
-        <ProgressBar
-            android:layout_width="match_parent"
+            android:id="@+id/numberPicker"
+            android:layout_gravity="center_horizontal" />
+
+        <!--<CalendarView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            android:minHeight="20dp"
-            android:paddingLeft="20sp"
-            android:paddingRight="20sp"
-            android:indeterminateOnly="true"
-            style="?android:attr/progressBarStyleHorizontal"
+            android:id="@+id/calendarView"
             />
+            -->
+
+           <!-- <DatePicker
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/datePicker"
+                android:calendarViewShown="false"
+                android:layout_margin="0dp"
+                android:spinnersShown="true"
+                android:datePickerMode="spinner"
+                android:layout_gravity="center_horizontal" />
+            <ListView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/listView"
+                android:layout_gravity="center" />-->
+
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/pick_time"
+                android:text="@string/pick_time"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_blue_dark"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                />
+
+            <GridView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/gridView"
+                android:columnWidth="90dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center">
+
+            </GridView>
+    </LinearLayout>
+
+
+
 </LinearLayout>
