--- a/app/src/main/res/layout/people_fragment.xml
+++ b/app/src/main/res/layout/people_fragment.xml
@@ -2,12 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="The boundaries of Asia are traditionally determined as that of Eurasia which is not Europe, as there is no clear geographical separation between them, and Asia is in itself originally a European definition. The most commonly accepted boundaries place Asia to the east of the Suez Canal, the Ural River, and the Ural Mountains, and south of the Caucasus Mountains and the Caspian and Black Seas.[4] It is bounded on the east by the Pacific Ocean, on the south by the Indian Ocean and on the north by the Arctic Ocean.
-        The boundaries of Asia are traditionally determined as that of Eurasia which is not Europe, as there is no clear geographical separation between them, and Asia is in itself originally a European definition. The most commonly accepted boundaries place Asia to the east of the Suez Canal, the Ural River, and the Ural Mountains, and south of the Caucasus Mountains and the Caspian and Black Seas.[4] It is bounded on the east by the Pacific Ocean, on the south by the Indian Ocean and on the north by the Arctic Ocean.
-        The boundaries of Asia are traditionally determined as that of Eurasia which is not Europe, as there is no clear geographical separation between them, and Asia is in itself originally a European definition. The most commonly accepted boundaries place Asia to the east of the Suez Canal, the Ural River, and the Ural Mountains, and south of the Caucasus Mountains and the Caspian and Black Seas.[4] It is bounded on the east by the Pacific Ocean, on the south by the Indian Ocean and on the north by the Arctic Ocean.
-        The boundaries of Asia are traditionally determined as that of Eurasia which is not Europe, as there is no clear geographical separation between them, and Asia is in itself originally a European definition. The most commonly accepted boundaries place Asia to the east of the Suez Canal, the Ural River, and the Ural Mountains, and south of the Caucasus Mountains and the Caspian and Black Seas.[4] It is bounded on the east by the Pacific Ocean, on the south by the Indian Ocean and on the north by the Arctic Ocean."
-        />
+        <!--<TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:id="@+id/text"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_blue_dark"
+            android:text="@string/are_you_staying"
+            android:textSize="30sp"
+            android:textAppearance="?android:attr/textAppearanceLarge"/> -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/eat_in"
+                android:layout_margin="20dp"
+                android:text="Eat in"
+                android:background="@color/colorPrimary"
+                android:padding="20dp"
+                android:elevation="2dp"
+                android:drawableLeft="@drawable/rest_table" />
+
+                <NumberPicker
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/numberPicker"
+                    android:visibility="gone"
+                    android:layout_gravity="center_horizontal"
+                    android:scrollIndicators="none" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_margin="20dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/takeaway"
+                    android:text="Take-away"
+                    android:padding="20dp"
+                    android:elevation="2dp"
+                    android:background="@color/colorPrimary"
+                    android:drawableLeft="@drawable/lunchbag" />
+
+            </LinearLayout>
+
 </LinearLayout>
