--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.polito.mad_lab3.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <Button
-        android:id="@+id/restaurantBtn"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Restaurant" />
-    <Button
-        android:id="@+id/reservationBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Reservation"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="it.polito.mad_lab3.MainActivity">
 
-</LinearLayout>
+        <!-- Import the our toolbar -->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/titolo_ricerca"
+            android:textSize="18sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/titoli"
+            android:layout_marginBottom="20sp"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/testo_ricerca_ristorante"
+            android:gravity="center"
+            android:text="@string/ricerca"
+            android:layout_span="1"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/info_ricerca"
+            android:gravity="center"
+            android:layout_marginBottom="10sp"/>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:orientation="vertical"
+            android:stretchColumns="1"
+            >
+            <TableRow>
+
+                <Button
+                    android:id="@+id/tasto_ricerca_ristorante"
+                    android:layout_column="4"
+                    android:text="find"
+                    android:onClick="searchRestaurant"
+                    android:background="#00FA9A">
+                </Button>
+
+            </TableRow>
+        </TableLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="#c0c0c0"
+            android:layout_marginTop="3sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/titolo_offerte_vicine"
+            android:textSize="18sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/titoli"
+            android:layout_marginTop="20sp"/>
+
+        <!--
+            qui ci possiamo mettere una lista con card medio/grandi
+            che possiamo cliccare e andare subito alla pagina
+            del ristorante desiderato
+         -->
+
+
+        <Button
+            android:layout_marginTop="50sp"
+            android:id="@+id/restaurantBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Restaurant" />
+        <!-- <Button
+            android:id="@+id/reservationBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reservation"/> -->
+
+    </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header" />
+
+
+</android.support.v4.widget.DrawerLayout>
