--- a/app/src/main/res/layout/food_photo_view.xml
+++ b/app/src/main/res/layout/food_photo_view.xml
@@ -7,7 +7,7 @@
         android:id="@+id/foodIV"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:adjustViewBounds="true" />
+        android:src="@drawable/nothumb"/>
     <RelativeLayout
         android:id="@+id/trasparentContainer"
         android:layout_width="150dp"
