--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,11 +96,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Restaurant" />
-        <!-- <Button
+        <Button
             android:id="@+id/reservationBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reservation"/> -->
+            android:text="Reservation"/>
 
     </LinearLayout>
 
