--- a/app/src/main/res/layout/activity_choose_photo.xml
+++ b/app/src/main/res/layout/activity_choose_photo.xml
@@ -3,33 +3,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     tools:context="it.polito.mad_lab3.restaurant.ChoosePhotoActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@android:drawable/dialog_holo_light_frame">
+        android:paddingTop="@dimen/activity_vertical_margin">
         <fragment
             xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
-            android:id="@+id/imageOffer_modifyOffer"
+            android:id="@+id/photoViewer"
             android:name="it.polito.mad_lab3.common.photo_viewer.PhotoViewer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
             custom:isEditable="true"
             custom:isLogo="false"
             custom:heightInDP="200"
             custom:widthInDP="200"
+            custom:addImageMode="clickOnImage"
             custom:initialBackground="@drawable/nothumb" />
         <TextView
+            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"/>
-        </LinearLayout>
+            android:text="Short description"/>
+        <EditText
+            android:id="@+id/descriptionET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/sendButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:text="SEND IMAGE"
+        android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
