--- a/app/src/main/res/layout/toolbar_view.xml
+++ b/app/src/main/res/layout/toolbar_view.xml
@@ -6,7 +6,8 @@
     android:layout_gravity="top"
     android:orientation="vertical">
 
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:iosched="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
@@ -15,7 +16,6 @@
     android:minHeight="?attr/actionBarSize"
     android:theme="@style/ToolbarTheme"
     app:titleTextAppearance="@style/Toolbar.TitleText"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     >
             <TextView
             android:id="@+id/toolbar_title"
