--- a/app/src/main/res/layout/activity_reservation_request.xml
+++ b/app/src/main/res/layout/activity_reservation_request.xml
@@ -1,39 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".reservation.ReservationActivity">
+
+    <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"/>
+
+<android.support.v4.widget.NestedScrollView
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".reservation.ReservationActivity">
-
-    <LinearLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    >
+
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
         android:orientation="vertical">
 
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/date_time"
-        class="it.polito.mad_lab3.reservation.CalendarFragment"
-        android:layout_marginBottom="5dp">
-    </fragment>
 
-    <FrameLayout
-        android:id="@+id/time_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="150dp" />
-    <FrameLayout
-        android:id="@+id/choice_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <FrameLayout
-        android:id="@+id/menu_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/date_time"
+            class="it.polito.mad_lab3.reservation.CalendarFragment"
+            android:layout_marginBottom="5dp">
+        </fragment>
+
+        <FrameLayout
+            android:id="@+id/time_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="5dp"/>
+
+        <FrameLayout
+            android:id="@+id/choice_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/next"
+            android:text="Next"/>
+
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
 </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
