--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -21,7 +21,7 @@
             android:fitsSystemWindows="true"
             app:expandedTitleMarginBottom="60dp"
             app:expandedTitleTextAppearance="@android:color/transparent"
-            app:contentScrim="@color/colorPrimary"
+            app:contentScrim="@color/themeColor"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:src="@color/colorPrimary"
+                android:src="@color/themeColor"
                 android:clickable="true"
                 android:background="?attr/selectableItemBackground"
                 app:layout_collapseMode="parallax" />
@@ -39,7 +39,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:title="Collapsing Toolbar"
                 app:layout_collapseMode="pin" />
 
@@ -147,7 +147,9 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <android.support.v7.widget.CardView
+
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    card_view:cardUseCompatPadding="true"
                     card_view:cardCornerRadius="4dp"
                     android:padding="16dp"
                     android:minHeight="64dp"
@@ -197,6 +199,7 @@
                 android:orientation="vertical">
                 <android.support.v7.widget.CardView
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    card_view:cardUseCompatPadding="true"
                     card_view:cardCornerRadius="4dp"
                     android:padding="16dp"
                     android:minHeight="64dp"
@@ -239,6 +242,7 @@
                 card_view:cardCornerRadius="4dp"
                 android:padding="16dp"
                 android:minHeight="64dp"
+                card_view:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
