--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -217,7 +217,8 @@
                             android:text="Offers"/>
                         <HorizontalScrollView
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:scrollbars="none">
                             <LinearLayout
                                 android:id="@+id/LLOffersPrev"
                                 android:layout_width="wrap_content"
