--- a/app/src/main/res/layout/activity_food_order.xml
+++ b/app/src/main/res/layout/activity_food_order.xml
@@ -17,15 +17,25 @@
 
 
         <android.support.design.widget.CollapsingToolbarLayout
-
-            android:id="@+id/toolbar_layout"
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:expandedTitleTextAppearance="@android:color/transparent">
+            app:expandedTitleMarginBottom="60dp"
+            app:expandedTitleTextAppearance="@android:color/transparent"
+            app:contentScrim="@color/themeColor"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                android:src="@color/themeColor"
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground"
+                app:layout_collapseMode="parallax" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,20 +49,27 @@
                 app:layout_collapseMode="parallax"
                 android:orientation="vertical">
 
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Summary"
+                    android:layout_marginBottom="5dp"
+                    android:textStyle="bold"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                    />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:background="@android:drawable/ic_menu_my_calendar"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Lunedì 20 Aprile"
+                        android:id="@+id/date"
                         android:textStyle="italic"
                         android:textAppearance="?android:attr/textAppearanceLarge"/>
                 </LinearLayout>
@@ -61,17 +78,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:drawable/ic_menu_upload"
-                        android:backgroundTint="@android:color/white"
-                        android:layout_marginRight="5dp"
-                        android:alpha="0.5" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="10:30"
+                        android:id="@+id/time"
                         android:textStyle="italic"
                         android:textAppearance="?android:attr/textAppearanceLarge"/>
                 </LinearLayout>
@@ -80,17 +92,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:drawable/ic_btn_speak_now"
-                        android:backgroundTint="@android:color/white"
-                        android:layout_marginRight="5dp"
-                        android:alpha="0.5" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="3 seats"
+                        android:id="@+id/seats"
                         android:textStyle="italic"
                         android:textAppearance="?android:attr/textAppearanceLarge"/>
                 </LinearLayout>
@@ -101,8 +108,10 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:title="Collapsing Toolbar"
                 app:layout_collapseMode="pin" />
+
 
 
 
@@ -121,7 +130,7 @@
             app:tabMode="scrollable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/themeColor"
             app:tabTextColor="#d3d3d3"
             app:tabTextAppearance="@android:style/TextAppearance.Medium"
             app:tabGravity="center"
@@ -134,6 +143,10 @@
             />
 
         <android.support.v4.view.ViewPager
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:id="@+id/viewpager_menu"
             android:layout_below="@+id/tab_layout_menu"
             android:layout_width="match_parent"
