--- a/app/src/main/res/layout/restaurant_userphoto_fragment.xml
+++ b/app/src/main/res/layout/restaurant_userphoto_fragment.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"/>
     <HorizontalScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
         <LinearLayout
             android:minHeight="64dp"
             android:layout_width="match_parent"
