--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -33,15 +33,17 @@
             />
     </LinearLayout>
 
-
-    <GridView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <com.example.ExpandableHeightGridView
         android:id="@+id/gridView"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:horizontalSpacing="2dp"
+        android:isScrollContainer="false"
         android:numColumns="4"
-        android:columnWidth="70dp">
-        </GridView>
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="20dp" />
+
 
     <!--
     <DatePicker
