--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -33,7 +33,7 @@
             />
     </LinearLayout>
 
-    <com.example.ExpandableHeightGridView
+    <it.polito.mad_lab3.common.ExpandableHeightGridView
         android:id="@+id/gridView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
