--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,59 +19,64 @@
 
         <!-- Import the our toolbar -->
         <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"/>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/titolo_ricerca"
-            android:textSize="18sp"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/titoli"
-            android:layout_marginBottom="20sp"/>
 
-        <EditText
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/testo_ricerca_ristorante"
-            android:gravity="center"
-            android:text="@string/ricerca"
-            android:layout_span="1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_height="3dp"
+            android:background="#c0c0c0"
+            android:layout_marginTop="3sp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/info_ricerca"
-            android:gravity="center"
-            android:layout_marginBottom="10sp"/>
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+        <LinearLayout
             android:orientation="vertical"
-            android:stretchColumns="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             >
-            <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/titolo_ricerca"
+                android:textSize="18sp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/titoli"
+                android:layout_marginBottom="5sp"/>
 
-                <Button
-                    android:id="@+id/tasto_ricerca_ristorante"
-                    android:layout_column="4"
-                    android:text="find"
-                    android:onClick="searchRestaurant"
-                    android:background="#00FA9A">
-                </Button>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/testo_ricerca_ristorante"
+                android:gravity="center"
+                android:layout_span="1"
+                android:layout_gravity="center_horizontal" />
 
-            </TableRow>
-        </TableLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/info_ricerca"
+                android:gravity="center"
+                android:layout_marginBottom="1sp"/>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="40sp"
+                android:layout_marginTop="1sp"
+                android:orientation="vertical"
+                android:stretchColumns="1"
+                >
+                <TableRow>
+
+                    <Button
+                        android:id="@+id/tasto_ricerca_ristorante"
+                        android:layout_column="4"
+                        android:text="find"
+                        android:onClick="searchRestaurant"
+                        android:background="#00FA9A">
+                    </Button>
+
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -88,7 +91,8 @@
             android:textSize="18sp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/titoli"
-            android:layout_marginTop="20sp"/>
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"/>
 
         <!--
             qui ci possiamo mettere una lista con card medio/grandi
@@ -108,9 +112,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Reservation"/>
-
-
-    </LinearLayout>
 
     </LinearLayout>
     <android.support.design.widget.NavigationView
