--- a/app/src/main/res/menu/activity_drawer_login.xml
+++ b/app/src/main/res/menu/activity_drawer_login.xml
@@ -3,20 +3,23 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/mod_profilo"
+            android:id="@+id/mod_profilo_user"
             android:title="@string/modifica_profilo" />
         <item
-            android:id="@+id/gest_prenotazioni"
+            android:id="@+id/prenotazioni_user"
             android:title="@string/prenotazioni" />
+        <item
+            android:id="@+id/logout_user"
+            android:title="@string/logout" />
     </group>
 
     <item android:title="Comunicazioni">
         <menu>
             <item
-                android:id="@+id/nav_contact"
+                android:id="@+id/nav_contact_user"
                 android:title="@string/contattaci" />
             <item
-                android:id="@+id/nav_bugs"
+                android:id="@+id/nav_bugs_user"
                 android:title="@string/segnala_problema" />
         </menu>
     </item>
