--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,9 @@
     <color name="lightGrey">#E6E6FA</color>
 
     <color name="titoli">#0000FF</color>
+    <color name="black">#000000</color>
+
+    <color name="good">#008000</color>
+    <color name="medium">#ff8400</color>
+    <color name="bad">#cc0000</color>
 </resources>
