--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
 
+    <!-- card lista delle ricerche -->
+    <dimen name="card_risultati_orizzontale">10sp</dimen>
+    <dimen name="card_risultati_verticale">5sp</dimen>
+
 </resources>
