--- a/app/src/main/res/drawable/left_triangle.xml
+++ b/app/src/main/res/drawable/left_triangle.xml
@@ -11,7 +11,7 @@
                 <size android:height="25dp" android:width="25dp"></size>
                 <stroke android:color="@android:color/transparent" android:width="10dp"/>
                 <solid
-                    android:color="@color/colorPrimary" />
+                    android:color="@color/themeColor" />
             </shape>
         </rotate>
     </item>
