--- a/app/src/main/res/layout/activity_photo_galery.xml
+++ b/app/src/main/res/layout/activity_photo_galery.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
+
+    <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
 
     <GridView
         android:id="@+id/galleryGridview"
@@ -13,4 +16,4 @@
         android:stretchMode="columnWidth"
         android:numColumns="2"/>
 
-</FrameLayout>
+</LinearLayout>
