--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff8400</color>
+    <color name="colorAccent">#0026ff</color>
     <color name="lightRed">#ffcccc</color>
     <color name="primary_material_light">#fff5f5f5</color>
 
