--- a/app/src/main/res/layout/activity_food_order.xml
+++ b/app/src/main/res/layout/activity_food_order.xml
@@ -11,49 +11,39 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:fitsSystemWindows="true">
 
-
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:expandedTitleMarginBottom="60dp"
-            app:expandedTitleTextAppearance="@android:color/transparent"
-            app:contentScrim="@color/themeColor"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="match_parent">
+
 
             <ImageView
-                android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:src="@color/themeColor"
-                android:clickable="true"
-                android:background="?attr/selectableItemBackground"
-                app:layout_collapseMode="parallax" />
+                android:src="@drawable/restaurant_test"/>
+
+            <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="40dp"
                 android:fitsSystemWindows="true"
                 android:scaleType="fitStart"
                 android:id="@+id/info"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="8dp"
                 android:gravity="end"
-                app:layout_collapseMode="parallax"
                 android:orientation="vertical">
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Summary"
+                    android:id="@+id/restaurant_name"
+                    android:textColor="@android:color/white"
+                    android:text="Alma Latina"
                     android:layout_marginBottom="5dp"
                     android:textStyle="bold"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
@@ -68,6 +58,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
                         android:text="Lunedì 20 Aprile"
                         android:id="@+id/date"
                         android:textStyle="italic"
@@ -82,6 +73,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
                         android:text="10:30"
                         android:id="@+id/time"
                         android:textStyle="italic"
@@ -97,25 +89,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="3 seats"
+                        android:textColor="@android:color/white"
                         android:id="@+id/seats"
                         android:textStyle="italic"
                         android:textAppearance="?android:attr/textAppearanceLarge"/>
                 </LinearLayout>
 
             </LinearLayout>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                android:title="Collapsing Toolbar"
-                app:layout_collapseMode="pin" />
-
-
-
-
-        </android.support.design.widget.CollapsingToolbarLayout>
+        </RelativeLayout>
 
 
     </android.support.design.widget.AppBarLayout>
@@ -136,7 +117,7 @@
             app:tabGravity="center"
             android:textAlignment="center"
             app:tabSelectedTextColor="#ffffff"
-            app:tabIndicatorColor="#4278c9"
+            app:tabIndicatorColor="@color/tabIndicator"
             app:tabIndicatorHeight="5dp"
             android:minHeight="?attr/actionBarSize"
             android:fadingEdge="horizontal"
@@ -150,7 +131,7 @@
             android:id="@+id/viewpager_menu"
             android:layout_below="@+id/tab_layout_menu"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             />
     </RelativeLayout>
 
