--- a/app/src/main/res/layout/choice_fragment.xml
+++ b/app/src/main/res/layout/choice_fragment.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:orientation="vertical">
 
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="3dp">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
@@ -117,13 +127,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/order_food"
+            android:padding="10dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:background="@drawable/roundend_background"
             android:text="Order now"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkout"
-            android:text="Finish"/>
+            android:padding="10dp"
+
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:background="@drawable/roundend_background"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:text="Check Out"/>
     </LinearLayout>
 
 
@@ -136,3 +155,5 @@
          android:scrollIndicators="none" /> -->
 
 </LinearLayout>
+
+</android.support.v7.widget.CardView>
