--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,5 +69,9 @@
         <item name="android:windowActionBarOverlay">true</item>
     </style>
 
+    <style name="MyGreenButton">
+        <item name="colorButtonNormal">#009900</item>
+    </style>
+
 
 </resources>
